kubenews-app-cicd/k8s/postgre-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
  namespace: tmp
spec:
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:15.0
          ports:
          - containerPort: 5432
