kubenews-app-cicd/k8s/postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre
  namespace: tmp
spec:
  selector: 
    app: postgre
  ports:
    - port: 5432
  type: ClusterIP
